--- a/1on1.md
+++ b/1on1.md
@@ -5,16 +5,24 @@
 - [サイト内検索専門のSIer](https://www.forcia.com/technology/#spook)
 - フルスタックエンジニア8割 営業2割
   - 検索専用DBを毎日作成
-  - SQLと独自アプリケーションフレームワーク
+  - SQL, JavaScript
   - Apache, Tomcat, PostgreSQL
 - SREチーム兼務
-  - 障害頻発アプリの対応
+  - 障害頻発システムの対応
+- 独自アプリケーションフレームワークの刷新プロジェクト
+  - TypeScript
 
 2. スタートアップ
 
 - リーガルテック領域、[契約書レビューサービス](https://ai-con-pro.com/function/)
 - アーキテクト、[マイクロサービス](https://github.com/ROhta/auth0day/blob/master/slide.md#%E3%81%95%E3%81%82%E8%AA%8D%E8%A8%BC%E3%81%A0)の初期構築
-- 情シス、セキュリティチェックシート、監査対応
+  - Go, TypeScript
+  - MySQL, Elasticsearch, Auth0
+- バックオフィス
+  - 情シス
+  - セキュリティチェックシート対応
+  - 監査対応
+- 育休半年取得
 - [新規システム](https://rohta.github.io/managed_explanation/57)構築
   - ActixWeb, Next.js
   - [AppMesh](https://rohta.github.io/managed_explanation/33), ControlTower
@@ -32,9 +40,20 @@
   - 食べログの「行った」の件数2700件ほど
 - フットサル
   - 個サルにちょくちょく行く
+- 筋トレ
+  - 自重中心、たまにフリーウェイト
+  - ベンチプレス記録伸びない
+- ビリヤード
+- 楽器
+  - ピアノ
+  - ヴァイオリン 
 - 息子
   - 1才半
   - 元気
   - 夜泣き
 - 最近引越した
   - 仕事も住居も移動
+    - ![IMG_20220606_180837](https://user-images.githubusercontent.com/13445921/172164759-39788916-8ae1-4a25-87ff-c9d73e8915c6.jpg)
+  - 懸垂マシン設置した
+    - ![IMG_20220606_214116](https://user-images.githubusercontent.com/13445921/172164923-a0f940c4-2f1a-4630-9056-bc9f15b76d0e.jpg)
+
