--- a/1on1.md
+++ b/1on1.md
@@ -25,9 +25,9 @@
 - 育休半年取得
 - [新規システム](https://rohta.github.io/managed_explanation/57)構築
   - ActixWeb, Next.js
-  - [AppMesh](https://rohta.github.io/managed_explanation/33), ControlTower
+  - [AppMesh](https://rohta.github.io/managed_explanation/33), 各種Firewall, ControlTower
 
-3. BizReach
+3. Now
 
 - 4月入社
 - 6月移動
