--- a/2022.md
+++ b/2022.md
@@ -1,6 +1,6 @@
 |  | 仕事 | プライベート |
 | - | - | - |
-| 1月 | 転職決意 | 息子からサイトメガロウイルス感染、１週間寝込む<br>息子コロナ陽性、計3週間保育園登園できず |
+| 1月 | 転職決意 | 息子からサイトメガロウイルス感染、１週間寝込む<br>息子コロナ陽性、親の待機期間と合わせ計3週間保育園登園不可 |
 | 2月 | 新規システムをこの段階から構築 |  |
 | 3月 | 退職 | 有給満喫 |
 | 4月 | 転職 | 息子進級ストレスにより夜寝なくなる |
