--- a/2022.md
+++ b/2022.md
@@ -1,14 +1,14 @@
-|      | 仕事                                                     | プライベート                                                                                                | 
-| ---- | -------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------- | 
-| 1月  | 転職決意                                                 | 息子からサイトメガロウイルス感染、１週間寝込む<br>息子コロナ陽性、親の待機期間と合わせ計3週間保育園登園不可 | 
-| 2月  | 新規システムをこの段階から構築                           | 家庭用バーカウンター設置                                                                                    | 
-| 3月  | 退職                                                     | 箱根旅行                                                                                                    | 
-| 4月  | 転職                                                     | 息子進級ストレスにより夜泣き激化                                                                            | 
-| 5月  | 事業終了                                                 | 引越<br>祖母訃報、葬式                                                                                      | 
-| 6月  | 移動                                                     | 家片付け                                                                                                    | 
-| 7月  | 社長訃報                                                 | 発熱による自宅待機                                                                                          | 
-| 8月  | 昇格                                                     | ご近所さんと仲良くなる<br>赤倉温泉旅行                                                                      | 
-| 9月  | チーム体制構築                                           | 大叔母訃報、葬式<br>祖父訃報、葬式<br>ディズニーランド                                                      | 
-| 10月 | 試用期間終了<br>カシマスタジアムでサッカー<br>経営塾参加 | Sake Diploma受験<br>Sake Diploma International受験                                                          | 
-| 11月 |                                                          |                                                                                                             | 
-| 12月 |                                                          |                                                                                                             | 
+|  | 仕事 | プライベート |
+| - | - | - |
+| 1月 | 転職決意<br>業務引継完了 | 息子からサイトメガロウイルス感染、１週間寝込む<br>息子コロナ陽性、親の待機期間と合わせ計3週間保育園登園不可 |
+| 2月 | 新規システムをこの段階から構築 | 家庭用バーカウンター設置 |
+| 3月 | 退職 | 箱根旅行 |
+| 4月 | 転職 | 息子進級ストレスにより夜泣き激化 |
+| 5月 | 事業撤退 | 引越<br>祖母訃報、葬式 |
+| 6月 | 異動 | 家片付け |
+| 7月 | 社長訃報 | 発熱による自宅待機<br>ご近所さんと仲良くなる |
+| 8月 | 昇進 | 赤倉温泉旅行 |
+| 9月 | チーム体制構築 | 大叔母訃報、葬式<br>祖父訃報、葬式<br>ディズニーランド |
+| 10月 | 試用期間終了<br>カシマスタジアムでサッカー<br>経営塾参加 | Sake Diploma受験<br>Sake Diploma International受験 |
+| 11月 |  |  |
+| 12月 |  |  |
