--- a/2022.md
+++ b/2022.md
@@ -9,6 +9,6 @@
 | 7月 | 社長訃報 | 発熱による自宅待機<br>ご近所さんと仲良くなる |
 | 8月 | 昇進 | 赤倉温泉旅行 |
 | 9月 | チーム体制構築 | 大叔母訃報、葬式<br>祖父訃報、葬式<br>ディズニーランド |
-| 10月 | 試用期間終了<br>カシマスタジアムでサッカー | Sake Diploma受験<br>Sake Diploma International受験 |
-| 11月 |  |  |
+| 10月 | 試用期間終了<br>カシマスタジアムでサッカー | Sake Diploma受験 |
+| 11月 |  | Sake Diploma取得 |
 | 12月 |  |  |
