--- a/2022.md
+++ b/2022.md
@@ -10,5 +10,5 @@
 | 8月 | 昇進 | 赤倉温泉旅行 |
 | 9月 | チーム体制構築 | 大叔母訃報、葬式<br>祖父訃報、葬式<br>ディズニーランド |
 | 10月 | 試用期間終了<br>カシマスタジアムでサッカー | Sake Diploma受験 |
-| 11月 |  | Sake Diploma取得 |
+| 11月 | 多部署連携業務増加 | Sake Diploma取得 |
 | 12月 |  |  |
